# julienne

./: .gitignore  .prettierignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  run.sh
helm/julienne/: Chart.yaml  values.yaml
helm/julienne/templates/: configMap.yaml  service.yaml
julienne/: __main__.py  celery.py  celeryconfig.py  config.py  exceptions.py  executors.py  old.__main__.py  schemas.py  tasks.py
julienne/sinks/: base.py  filesystem.py
julienne/sources/: base.py  database.py  filesystem.py
scripts/: gen_ssl_cert.sh  run_celery_flower.sh  run_julienne.sh  run_julienne_worker.sh
tests/: test_source_iterator.py  test_source_json_dir.py  test_source_json_file.py
tests/data/: patient_example.json
