[tool.poetry]
name = "julienne"
version = "0.1.0"
description = "An integration engine built in python on celery."
authors = ["PattyC <patrickcoffey91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["msgpack", "redis", "auth"], version = "^5.2.7"}
pydantic = "^1.10.2"
flower = "^1.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"

[tool.pytest.ini_options]
addopts = "--cov=julienne --cov-report term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
